Fixed issue where the challenge modal would open in the middle of the screen on mobile

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -21,11 +21,13 @@
 /*MODAL*/
 
 .react-aria-ModalOverlay {
+    display: flex;
+    flex-direction: column;
     position: fixed;
     top: 0;
     left: 0;
-    width: 100vw;
-    height: 100dvh;
+    bottom: 0;
+    right: 0;
     background: rgba(0 0 0 / .5);
     align-content: center;
     z-index: 100001;
